tests/ui/parser/issues/issue-104867-inc-dec.stderr
error: Rust has no postfix increment operator
  --> $DIR/issue-104867-inc-dec.rs:7:6
   |
LL |     i++;
   |      ^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL -     i++;
LL +     i += 1;
   |

error: Rust has no postfix increment operator
  --> $DIR/issue-104867-inc-dec.rs:12:8
   |
LL |     s.x++;
   |        ^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL -     s.x++;
LL +     s.x += 1;
   |

error: Rust has no postfix increment operator
  --> $DIR/issue-104867-inc-dec.rs:17:9
   |
LL |     if i++ == 1 {}
   |         ^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL -     if i++ == 1 {}
LL +     if { let tmp = i; i += 1; tmp } == 1 {}
   |

error: Rust has no prefix increment operator
  --> $DIR/issue-104867-inc-dec.rs:22:5
   |
LL |     ++i;
   |     ^^ not a valid prefix operator
   |
help: use `+= 1` instead
   |
LL -     ++i;
LL +     i += 1;
   |

error: Rust has no prefix increment operator
  --> $DIR/issue-104867-inc-dec.rs:27:8
   |
LL |     if ++i == 1 { }
   |        ^^ not a valid prefix operator
   |
help: use `+= 1` instead
   |
LL -     if ++i == 1 { }
LL +     if { i += 1; i } == 1 { }
   |

error: Rust has no postfix increment operator
  --> $DIR/issue-104867-inc-dec.rs:33:6
   |
LL |     i++;
   |      ^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL -     i++;
LL +     i += 1;
   |

error: Rust has no prefix increment operator
  --> $DIR/issue-104867-inc-dec.rs:41:5
   |
LL |     ++i;
   |     ^^ not a valid prefix operator
   |
help: use `+= 1` instead
   |
LL -     ++i;
LL +     i += 1;
   |

error: aborting due to 7 previous errors

